fix: remove jdk.naming.ldap module from osx jdk